[gd_scene load_steps=7 format=3 uid="uid://olrqjglx2cq"]

[ext_resource type="Theme" uid="uid://dx6m21m2e8ni0" path="res://assets/normal.tres" id="1_ne2i4"]
[ext_resource type="Script" path="res://scripts/race_start.gd" id="2_upr7r"]

[sub_resource type="LabelSettings" id="LabelSettings_qyabr"]
font_size = 128
outline_size = 12
outline_color = Color(0, 0, 0, 1)
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="Animation" id="Animation_w3utm"]
resource_name = "321"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("origin/Rotate/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["3", "2", "1", "GO!"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("origin/Rotate:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.233333, 0.333333, 0.466667, 0.6, 1, 1.06667, 1.13333, 1.23333, 1.33333, 1.46667, 1.6, 2, 2.06667, 2.13333, 2.23333, 2.33333, 2.46667, 2.6, 3, 3.06667, 3.13333, 3.23333, 3.33333, 3.46667, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.523599, -0.523599, 0.0, 0.174533, -0.174533, 0.0, 0.0, 0.523599, -0.523599, 0.0, 0.174533, -0.174533, 0.0, 0.0, 0.523599, -0.523599, 0.0, 0.174533, -0.174533, 0.0, 0.0, 0.523599, -0.523599, 0.0, 0.174533, -0.174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("origin/Rotate:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.2, 0.266667, 0.3, 0.366667, 1, 1.13333, 1.2, 1.26667, 1.3, 1.36667, 2, 2.13333, 2.2, 2.26667, 2.3, 2.36667, 3, 3.13333, 3.2, 3.26667, 3.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(575.5, 323.5), Vector2(575.5, 300), Vector2(575.5, 323.5), Vector2(575.5, 310), Vector2(575.5, 323.5), Vector2(575.5, 323.5), Vector2(575.5, 323.5), Vector2(575.5, 300), Vector2(575.5, 323.5), Vector2(575.5, 310), Vector2(575.5, 323.5), Vector2(575.5, 323.5), Vector2(575.5, 323.5), Vector2(575.5, 300), Vector2(575.5, 323.5), Vector2(575.5, 310), Vector2(575.5, 323.5), Vector2(575.5, 323.5), Vector2(575.5, 323.5), Vector2(575.5, 300), Vector2(575.5, 323.5), Vector2(575.5, 310), Vector2(575.5, 323.5)]
}

[sub_resource type="Animation" id="Animation_p8uly"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("origin/Rotate/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Press any button
to start"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("origin/Rotate:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("origin/Rotate:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(575.5, 323.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c6tu8"]
_data = {
"321": SubResource("Animation_w3utm"),
"RESET": SubResource("Animation_p8uly")
}

[node name="RaceStart" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ne2i4")
script = ExtResource("2_upr7r")

[node name="InputDelay" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Finish" type="Timer" parent="."]
wait_time = 3.0

[node name="origin" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2

[node name="Rotate" type="Control" parent="origin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 575.5
offset_top = 323.5
offset_right = 576.5
offset_bottom = 324.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="origin/Rotate"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.5
offset_top = -48.0
offset_right = 128.5
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "Press any button
to start"
label_settings = SubResource("LabelSettings_qyabr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="origin/Rotate"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_c6tu8")
}

[connection signal="timeout" from="InputDelay" to="." method="_on_input_delay_timeout"]
[connection signal="timeout" from="Finish" to="." method="_on_finish_timeout"]
[connection signal="animation_finished" from="origin/Rotate/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
